--- a/index.html
+++ b/index.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Result</title>
-	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
-		//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css
-		<table id="table_id" class="display">
-    <thead>
-        <tr>
-            <th>Column 1</th>
-            <th>Column 2</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Row 1 Data 1</td>
-            <td>Row 1 Data 2</td>
-        </tr>
-        <tr>
-            <td>Row 2 Data 1</td>
-            <td>Row 2 Data 2</td>
-        </tr>
-    </tbody>
-</table>
-	</body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <style>
+    div > p {
+      font-size:20px;
+    }
+  </style>
+  <title>JS Bin</title>
+</head>
+<body>
+  <div>
+    <p style="color:blue;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui molestiae eius ullam eveniet ratione nam doloremque enim eum nisi optio provident in impedit velit, expedita, obcaecati distinctio inventore quam architecto.</p>
+  </div>
+</body>
 </html>
