--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <style>
-    div > p {
-      font-size:20px;
-    }
-  </style>
   <title>JS Bin</title>
 </head>
 <body>
-  <div>
-    <p style="color:blue;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui molestiae eius ullam eveniet ratione nam doloremque enim eum nisi optio provident in impedit velit, expedita, obcaecati distinctio inventore quam architecto.</p>
-  </div>
+  Hello World
+  <a href = "www.naver.com">네이버로 갑니다.</a> 
 </body>
 </html>
