--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   Hello World
-  <a href = "www.naver.com">네이버로 갑니다.</a> 
+  <a href = "https://www.naver.com">네이버로 갑니다.</a> 
 </body>
 </html>
