--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li>릴파</li>
     <li>주르르</li>
     <li>고세구</li>
-    <li>비챤<a href="https://youtu.be/pRxpbeqMnJw"></a></li>
+    <li><a href="https://youtu.be/pRxpbeqMnJw">비챤</a></li>
     <li>우왁굳</li>
    
   </div>
