--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6103429">17일</a> - <a href="https://youtu.be/-3LvGLgatJY">화요비챤(중앙일보 인터뷰후기,쥬뗌므,마크제일검,노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6141990">20일</a> - <a href="https://youtu.be/trrhXmsS_vs">금요일~(친구만나고 온 썰,가이드 보컬 썰,오디션썰,딸바보) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6153849">21일</a> - <a href="https://youtu.be/75dIsQrAZdE">짧뱅쓰!!!(커버곡가리 , VRChat 맵 탐방)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - <a href="https://youtu.be/gHLTd-iVt68">화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)</a></ul>
       </ul>
       <div><img src="" alt=""></div>
     </section>
