--- a/index.html
+++ b/index.html
@@ -113,24 +113,24 @@
       
        <p>　</p>      
       <ul>4월
-      <ul>1일 - <a href="https://youtu.be/M6MRZ-fUOuA">고세구 하이빵가루~</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5445912">2일</a> - 비챤씹덕 티어겜 ●</ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5474954">3일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5488244">5일</a> - 두둥등챤</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5503356">6일</a> - 잔잔뱅</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5531838">8일</a> - 불금이당~!!!!</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5545018">9일</a> - <a href="https://youtu.be/wyywmi55IK8">4시 마인크래프트 RPG 컨텐츠</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5602182">13일</a> - 초짧뱅~!!!!</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5636652">16일</a> - 4시반) VRC 먼저 소리지르면 지는 공포맵 1:1</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5666524">17일</a> - 일요일조아</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5684770">19일</a> - 초 지각 해버린 wwwwwwwwwwwww</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - 차분하게. 살아가기 ^^7</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5714574">21일</a> - 4시 반) VRC 풀트 10점식 찍먹</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5742011">23일</a> - 짧뱅스</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5760265">24일</a> - VRC 패션쇼 공지쓰는 날</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5796304">26일</a> - 5시) VRC 유튜브 인/아웃트로 촬영</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5837476">29일</a> - 해피 금요일~~</a></ul>
-      <ul><a href="https://cafe.naver.com/steamindiegame/5852428">30일</a> - 해피 주말!!!!!!!</a></ul>
+        <ul>1일 - <a href="https://youtu.be/M6MRZ-fUOuA">고세구 하이빵가루~</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5445912">2일</a> - 비챤씹덕 티어겜 ●</ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5474954">3일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5488244">5일</a> - 두둥등챤</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5503356">6일</a> - 잔잔뱅</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5531838">8일</a> - 불금이당~!!!!</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5545018">9일</a> - <a href="https://youtu.be/wyywmi55IK8">4시 마인크래프트 RPG 컨텐츠</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5602182">13일</a> - 초짧뱅~!!!!</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5636652">16일</a> - 4시반) VRC 먼저 소리지르면 지는 공포맵 1:1</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5666524">17일</a> - 일요일조아</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5684770">19일</a> - 초 지각 해버린 wwwwwwwwwwwww</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - 차분하게. 살아가기 ^^7</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5714574">21일</a> - 4시 반) VRC 풀트 10점식 찍먹</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5742011">23일</a> - 짧뱅스</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5760265">24일</a> - VRC 패션쇼 공지쓰는 날</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5796304">26일</a> - 5시) VRC 유튜브 인/아웃트로 촬영</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5837476">29일</a> - 해피 금요일~~</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5852428">30일</a> - 해피 주말!!!!!!!</a></ul>
 
 
 </ul>
@@ -145,7 +145,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6002509">10일</a> - <a href="https://youtu.be/OEpGb5RmKTQ">화하하하하(믹싱썰 , 챤버지 게임썰 , 페글린)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6002509">11일</a> - 슈슈슈슈</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6060992">14일</a> - 짧뱅쓰 ●</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6069591">15일</a> - <a href="https://youtu.be/kqwEbmAjSSE">4시반 VRC 풀트(저작권크리)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6069591">15일</a> - 4시반 VRC 풀트(저작권크리) ●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6103429">17일</a> - <a href="https://youtu.be/-3LvGLgatJY">화요비챤(중앙일보 인터뷰후기,쥬뗌므,마크제일검,노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6141990">20일</a> - <a href="https://youtu.be/trrhXmsS_vs">금요일~(친구만나고 온 썰,가이드 보컬 썰,오디션썰,딸바보) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6153849">21일</a> - <a href="https://youtu.be/75dIsQrAZdE">짧뱅쓰!!!(커버곡가리 , VRChat 맵 탐방)</a></ul>
