--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>　</p>
       
       <ul>10월
-      <ul>31일 - <a href="https://youtu.be/z479KgGwAgM">Just Chatting (할로윈게임{파스모포비아,데바데}</a></ul></ul>
+      <ul>31일 - <a href="https://youtu.be/z479KgGwAgM">할로윈 기념 왕게임데이 (파스모포비아,데바데)</a></ul></ul>
       
       <p>　</p>
       <div>2022년</div>
@@ -151,12 +151,12 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6141990">20일</a> - <a href="https://youtu.be/trrhXmsS_vs">금요일~(친구만나고 온 썰,가이드 보컬 썰,오디션썰,딸바보) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6153849">21일</a> - <a href="https://youtu.be/75dIsQrAZdE">짧뱅쓰!!!(커버곡가리 , VRChat 맵 탐방)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6172346">22일</a> - 망비챤</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - <a href="https://youtu.be/gHLTd-iVt68">화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - 화요일 낮에~</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6235761">27일</a> - SO HOT</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6247143">28일</a> - 4시) 이세돌 미연시</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - 화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - 화요일 낮에~●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6235761">27일</a> - <a href="https://youtu.be/Jz5DcMOcfOw">SO HOT</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6247143">28일</a> - <a href="https://youtu.be/VSGGYruKDJQ">4시) 이세돌 미연시</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">29일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6276790">2부</a>
-          4시반) 풀트뱅</a></ul>
+          <a href="https://youtu.be/Hp_HbfT0bRI">4시반) 풀트뱅</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6297813">31일</a> - 7시) ER 인비테이셔널</a></ul>
 
 </span>
