--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6141990">20일</a> - <a href="https://youtu.be/trrhXmsS_vs">금요일~(친구만나고 온 썰,가이드 보컬 썰,오디션썰,딸바보) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6153849">21일</a> - <a href="https://youtu.be/75dIsQrAZdE">짧뱅쓰!!!(커버곡가리 , VRChat 맵 탐방)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6172346">22일</a> - 망비챤</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - 화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)●</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - 화요일 낮에~●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - 화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)(저작권크리)●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - 화요일 낮에~(저작권크리)●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6235761">27일</a> - <a href="https://youtu.be/Jz5DcMOcfOw">SO HOT</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">28일</a> - <a href="https://youtu.be/VSGGYruKDJQ">4시) 이세돌 미연시</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">29일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6276790">2부</a>
