--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - 오뱅창</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6383582">05일</a> - <a href="https://youtu.be/BRxugn7WEac">8시 왁타버스 고멤가요제 드래프트</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6402715">07일</a> - <a href="https://youtu.be/ILGJw-WkJ3c">5시) VRC 여행떠나기(VRC풀트 꽃구경)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6445830">10일</a> - </a href="https://youtu.be/UuZ_r9_t8MY">10시가 되기 전 떠나는 신데렐라 ●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6445830">10일</a> - </a href="https://youtu.be/UuZ_r9_t8MY">10시가 되기 전 떠나는 신데렐라(저작권크리) ●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6459700">11일</a> - <a href="https://youtu.be/EE-KpZLJv58">8시) Butter 커버 공개</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6480388">12일</a> - <a href="https://youtu.be/RuRI-GuyhwQ">4시반) VRC Butter 풀트뱅 1부 </a> 
                                                                              , <a href="https://youtu.be/3lD0j0sPTkc">4시반) VRC Butter 풀트뱅 2부</a></ul>
