--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>　</p>
     
     <section>
-      <div>2011년</div>
+      <div>2021년</div>
       <ul>8월
         <ul>26일 - <a href="https://youtu.be/XQXg0ktkRRo">비챤 이세돌 합격</a></ul>
       </ul>
@@ -156,7 +156,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6235761">27일</a> - <a href="https://youtu.be/Jz5DcMOcfOw">SO HOT</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">28일</a> - <a href="https://youtu.be/VSGGYruKDJQ">4시) 이세돌 미연시</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">29일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6276790">2부</a>
-         </a href="https://youtu.be/Hp_HbfT0bRI">4시반) 풀트뱅(저작권크리)●</a></ul>
+        - </a href="https://youtu.be/Hp_HbfT0bRI">4시반) 풀트뱅(저작권크리)●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6297813">31일</a> - <a href="https://youtu.be/x2buVnTCnmU">7시) ER 인비테이셔널 (이세돌 합방)</a></ul>
 
           </ul>
