--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           　해당 영상의 댓글로 남겨주시면 체크하겠습니다</ul>
       
       <ul>※2022년 10월 18일자 기준 가지고 있는 6월달 분까지 업로드 완료<br>
-           　7,8월 분은 업로드를 잠시 보류하고<br>
-          　제공받은 영상들로 비어있는 칸 채우는걸 먼저 진행하겠습니다</ul>
+           　7 , 8월 분은 업로드를 잠시 보류하고 제공받은 영상들로<br>
+          　비어있는 칸 채우는걸 먼저 진행하겠습니다<br>
+          　영상 제공 해주신분들 감사합니다</ul>
      </nav>
     
     <p>　</p>
