--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5062791">10일</a> - 감사합니다!!!!</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5078795">11일</a> - 6시) 겨울봄 공개 !</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5105682">12일</a> - 겨울봄같은 날씨..^^*</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5129952">13일</a> - <a href="https://youtu.be/tPq9jZtHQZo">5시 일식밴드 덕틀즈</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5150627">14일</a> - <a href="https://youtu.be/pRxpbeqMnJw">4시반 풀트띠</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5166524">15일</a> - 4시) 10만기념 Q&A</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5129952">13일</a> - <a href="https://youtu.be/tPq9jZtHQZo">5시 일식밴드 덕틀즈(덕틀즈 , 사이언티스트 티저)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5150627">14일</a> - <a href="https://youtu.be/pRxpbeqMnJw">4시반 풀트띠(교복 풀트뱅)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5166524">15일</a> - <a href="https://youtu.be/heIrc5UBNTA">4시) 10만기념 Q&A(추억의 노래가리 , 114문 114답 , 매니저 마지막 신청곡 취기를빌려)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5181370">16일</a> - 휴뱅 채팅방송</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5195059">17일</a> - 휴뱅 채팅방송</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5213102">18일</a> - <a href="https://youtu.be/I217PRko2vQ">짧뱅 밥먹으면서 그림자복도 찍먹</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5241761">20일</a> - <a href="https://youtu.be/syREAUzW25M">등챤</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - 지코쿠지코쿠~</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - <a href="https://youtu.be/J3aX3VosnFU">지코쿠지코쿠~(목풀기 노래뱅 , 뽀삐 1 , 발로란트)/ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5272932">22일</a> - 일하는 날</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - 4시 반) 풀트뱅뱅</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5313483">25일</a> - 행복한 금요일</ul>
