--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>이세계 아이돌</title>
 </head>
 <body>
-  <span style="line-height:170%">
+  <span style="line-height:160%">
 
   <header>
     <h1>이세계 아이돌 - 비챤</h1>
@@ -110,7 +110,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5195059">17일</a> - 휴뱅 채팅방송</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5213102">18일</a> - <a href="https://youtu.be/I217PRko2vQ">짧뱅 밥먹으면서 그림자복도 찍먹</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5241761">20일</a> - <a href="https://youtu.be/syREAUzW25M">등챤</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - <a href="https://youtu.be/J3aX3VosnFU">지코쿠지코쿠~(목풀기 노래뱅 , 뽀삐 1 , 발로란트)/ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - <a href="https://youtu.be/J3aX3VosnFU">지코쿠지코쿠~(목풀기 노래뱅 , 뽀삐 1 , 발로란트)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5272932">22일</a> - 일하는 날</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - 4시 반) 풀트뱅뱅</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5313483">25일</a> - 행복한 금요일</ul>
