--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5213102">18일</a> - <a href="https://youtu.be/I217PRko2vQ">짧뱅 밥먹으면서 그림자복도 찍먹</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5241761">20일</a> - <a href="https://youtu.be/syREAUzW25M">등챤</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - <a href="https://youtu.be/J3aX3VosnFU">지코쿠지코쿠~(목풀기 노래뱅 , 뽀삐 1 , 발로란트)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5272932">22일</a> - 일하는 날</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - 4시 반) 풀트뱅뱅</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5313483">25일</a> - 행복한 금요일</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5348653">27일</a> - 데쳐졌어요</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5371729">29일</a> - 태어나서 처음 커비해보는 사람</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5395942">30일</a> - 4시반) 누구보다 즐겁게 커비</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5272932">22일</a> - <a href="https://youtu.be/pIuiiOjNUD4">일하는 날(애니&드라마 노가리 , 춤배우기 공지 , 마크 , 뱅종곡 flos)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - <a href="https://youtu.be/ISZQfFtVAA4">4시 반) 풀트뱅뱅(VRC풀트 애송이챤 , 노래뱅)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5313483">25일</a> - <a href="https://youtu.be/UPRLHbVEn3I">행복한 금요일(톰보이 연습 , 커피톡 , 프리스타일 랩 , 뱅종곡 기억을 걷는 시간)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5348653">27일</a> - <a href="https://youtu.be/SUVopNpRLls">데쳐졌어요(숙취챤 , 노래뱅 , 편집자 뺏어온게 아니다)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5371729">29일</a> - <a href="https://youtu.be/hJ1_BmToERw">태어나서 처음 커비해보는 사람(망냥냥 새벽뱅 , 별의 커비 디스커버리 , 와 이거 쥰내 재밌다!)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5395942">30일</a> - <a href="https://youtu.be/SUVopNpRLls">4시반) 누구보다 즐겁게 커비</ul>
             
            
       </ul><ul><a href=""></a>  <a href=""></a></ul>
