--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5241761">20일</a> - <a href="https://youtu.be/syREAUzW25M">등챤</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - <a href="https://youtu.be/J3aX3VosnFU">지코쿠지코쿠~(목풀기 노래뱅 , 뽀삐 1 , 발로란트)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5272932">22일</a> - <a href="https://youtu.be/pIuiiOjNUD4">일하는 날(애니&드라마 노가리 , 춤배우기 공지 , 마크 , 뱅종곡 flos)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - <a href="https://youtu.be/ISZQfFtVAA4">4시 반) 풀트뱅뱅(VRC풀트 애송이챤 , 노래뱅)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - <a href="https://youtu.be/ISZQfFtVAA4">4시 반) 풀트뱅뱅(마왕과 VRC풀트 애송이챤 , 노래뱅)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5313483">25일</a> - <a href="https://youtu.be/UPRLHbVEn3I">행복한 금요일(톰보이 연습 , 커피톡 , 프리스타일 랩 , 뱅종곡 기억을 걷는 시간)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5348653">27일</a> - <a href="https://youtu.be/SUVopNpRLls">데쳐졌어요(숙취챤 , 노래뱅 , 편집자 뺏어온게 아니다)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5371729">29일</a> - <a href="https://youtu.be/hJ1_BmToERw">태어나서 처음 커비해보는 사람(망냥냥 새벽뱅 , 별의 커비 디스커버리 , 와 이거 쥰내 재밌다!)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5395942">30일</a> - <a href="https://youtu.be/SUVopNpRLls">4시반) 누구보다 즐겁게 커비</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5395942">30일</a> - </a href="https://youtu.be/SUVopNpRLls">4시반) 누구보다 즐겁게 커비</ul>
             
            
       </ul><ul><a href=""></a>  <a href=""></a></ul>
@@ -124,9 +124,9 @@
        <p>　</p>      
       <ul>4월
         <ul>01일 - <a href="https://youtu.be/M6MRZ-fUOuA">고세구 하이빵가루~</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5445912">02일</a> - 비챤씹덕 티어겜 ●</ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5474954">03일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5488244">05일</a> - 두둥등챤</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5445912">02일</a> - </a href="https://youtu.be/kM1SraKvaLs">비챤씹덕 티어겜 ●</ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5474954">03일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기(니즈님 풀트 춤배우기 , 애송이챤)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5488244">05일</a> - <a href="https://youtu.be/zOwbpWfFC2c">두둥등챤(첫 유튭스트리밍썰 , 아바타 변천사 , 고대라니 , MMD맵 , 오토튠 노래 ,노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5503356">06일</a> - 잔잔뱅</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5531838">08일</a> - 불금이당~!!!!</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5545018">09일</a> - <a href="https://youtu.be/wyywmi55IK8">4시 마인크래프트 RPG 컨텐츠</a></ul>
