--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/5474954">03일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기(니즈님 풀트 춤배우기 , 애송이챤)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5488244">05일</a> - <a href="https://youtu.be/zOwbpWfFC2c">두둥등챤(첫 유튭스트리밍썰 , 아바타 변천사 , 고대라니 , MMD맵 , 오토튠 노래 ,노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5503356">06일</a> - <a href="https://youtu.be/2l6iLQ8H348">잔잔뱅(북기 & 우벌 서열정리 , 추억가리 , 킹무위키 - 비챤 , 챤바 기웃기웃)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5531838">08일</a> - 불금이당~!!!!</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5531838">08일</a> - <a href="https://youtu.be/chgMOS8OrFo">불금이당~!!!!(봄날 비하인드 , DayBreak Frontline 100만 기념영상 , 회의썰 , 이세돌망상 , 노래가리)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5545018">09일</a> - <a href="https://youtu.be/wyywmi55IK8">4시 마인크래프트 RPG 컨텐츠</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5602182">13일</a> - 초짧뱅~!!!!</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5636652">16일</a> - 4시반) VRC 먼저 소리지르면 지는 공포맵 1:1</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5666524">17일</a> - 일요일조아</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5684770">19일</a> - 초 지각 해버린 wwwwwwwwwwwww</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - 차분하게. 살아가기 ^^7</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5602182">13일</a> - <a href="https://youtu.be/lsTf_cXeDaI">초짧뱅~!!!!(초능력가리 , 릴파와 아이네 사이 비챤 , 먹가리 , 부산여행썰 , 촬영아카데미 낙하산)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5636652">16일</a> - <a href="https://youtu.be/JmgeM2xjd9w">4시반) VRC 먼저 소리지르면 지는 공포맵 1:1(예전 노래 커미션 썰 , 마법소녀가 되고 싶어 , VRC공포맵 1:1 , 중2챤 공개 , 신호등 티져)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5666524">17일</a> - <a href="https://youtu.be/DciqjD3rdn4">일요일조아(먹가리 , 살고 싶어 만든 내 매드무비 , 얼불춤)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5684770">19일</a> - <a href="https://youtu.be/Sl2XPWUbVI4">초 지각 해버린 wwwwwwwwwwwww(기타치며 노래뱅 , 언니들과 롤한 썰 , 이세돌 눈빛 보내기 팬게임 , 신호등 최초공개 , 이세돌 회의썰)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - <a href="https://youtu.be/Sl2XPWUbVI4">차분하게. 살아가기 ^^7(기타 노래뱅 , MBTI가리 , 라프텔보며 애니가리 , 얼불춤)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5714574">21일</a> - 4시 반) VRC 풀트 10점식 찍먹</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5742011">23일</a> - 짧뱅스</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5760265">24일</a> - VRC 패션쇼 공지쓰는 날</a></ul>
