--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/5636652">16일</a> - <a href="https://youtu.be/JmgeM2xjd9w">4시반) VRC 먼저 소리지르면 지는 공포맵 1:1(예전 노래 커미션 썰 , 마법소녀가 되고 싶어 , VRC공포맵 1:1 , 중2챤 공개 , 신호등 티져)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5666524">17일</a> - <a href="https://youtu.be/DciqjD3rdn4">일요일조아(먹가리 , 살고 싶어 만든 내 매드무비 , 얼불춤)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5684770">19일</a> - <a href="https://youtu.be/Sl2XPWUbVI4">초 지각 해버린 wwwwwwwwwwwww(기타치며 노래뱅 , 언니들과 롤한 썰 , 이세돌 눈빛 보내기 팬게임 , 신호등 최초공개 , 이세돌 회의썰)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - <a href="https://youtu.be/Sl2XPWUbVI4">차분하게. 살아가기 ^^7(기타 노래뱅 , MBTI가리 , 라프텔보며 애니가리 , 얼불춤)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5714574">21일</a> - 4시 반) VRC 풀트 10점식 찍먹</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5742011">23일</a> - 짧뱅스</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - <a href="https://youtu.be/xy736ukbqR4">차분하게. 살아가기 ^^7(기타 노래뱅 , MBTI가리 , 라프텔보며 애니가리 , 얼불춤)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5714574">21일</a> - <a href="https://youtu.be/fDyfbprXBJw">4시 반) VRC 풀트 10점식 찍먹(기타 노래뱅 , 10점 풀트 , 어이 테메~)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5742011">23일</a> - <a href="https://youtu.be/Gf7wmNugyhM">짧뱅스(이세돌 싸이퍼 후기 , 패션쇼 기획 , 기타 노래뱅  , 뢴트 & 어머니 생신썰)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5760265">24일</a> - VRC 패션쇼 공지쓰는 날</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5796304">26일</a> - 5시) VRC 유튜브 인/아웃트로 촬영</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5837476">29일</a> - 해피 금요일~~</a></ul>
