--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       
       <p><br></p>
       <ul>※ 영상에서 소리가 안나오는 구간(빨간선 구간)이 있거나 문제가 있다면<br>
-          　 해당 영상의 댓글로 남겨주시면 체크하겠습니다</ul>
+          　 해당 영상의 댓글로 남겨주시면 체크하겠습니다<br>
+             　 다만 진행중에 뜬금없는 노래가 나오는건 저작권 회피용이니 그러려니 넘어가시면 됩니다</ul>
       
       <ul>※ 2022년 10월 18일자 기준 가지고 있는 6월달 분까지 업로드 완료<br>
            　 7 , 8월 분은 업로드를 잠시 보류하고 제공받은 영상들로<br>
