--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5241761">20일</a> - <a href="https://youtu.be/syREAUzW25M">등챤</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5256791">21일</a> - <a href="https://youtu.be/J3aX3VosnFU">지코쿠지코쿠~(목풀기 노래뱅 , 뽀삐 1 , 발로란트)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5272932">22일</a> - <a href="https://youtu.be/pIuiiOjNUD4">일하는 날(애니&드라마 노가리 , 춤배우기 공지 , 마크 , 뱅종곡 flos)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - <a href="https://youtu.be/ISZQfFtVAA4">4시 반) 풀트뱅뱅(마왕과 VRC풀트 애송이챤 , 노래뱅)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5286621">23일</a> - <a href="https://youtu.be/ISZQfFtVAA4">4시 반) 풀트뱅뱅(마왕과 VRC풀트 애송이챤 , 노래뱅)(저작권크리 음원교체)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5313483">25일</a> - <a href="https://youtu.be/UPRLHbVEn3I">행복한 금요일(톰보이 연습 , 커피톡 , 프리스타일 랩 , 뱅종곡 기억을 걷는 시간)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5348653">27일</a> - <a href="https://youtu.be/SUVopNpRLls">데쳐졌어요(숙취챤 , 노래뱅 , 편집자 뺏어온게 아니다)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5371729">29일</a> - <a href="https://youtu.be/hJ1_BmToERw">태어나서 처음 커비해보는 사람(망냥냥 새벽뱅 , 별의 커비 디스커버리 , 와 이거 쥰내 재밌다!)</ul>
@@ -158,17 +158,17 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6002509">10일</a> - <a href="https://youtu.be/OEpGb5RmKTQ">화하하하하(믹싱썰 , 챤버지 게임썰 , 페글린)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6002509">11일</a> - 슈슈슈슈</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6060992">14일</a> - 짧뱅쓰 ●</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6069591">15일</a> - 4시반 VRC 풀트(저작권크리) ●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6069591">15일</a> - 4시반 VRC 풀트(저작권크리)(길이때문에 수정불가 편집요망) ●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6103429">17일</a> - <a href="https://youtu.be/-3LvGLgatJY">화요비챤(중앙일보 인터뷰후기,쥬뗌므,마크제일검,노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6141990">20일</a> - <a href="https://youtu.be/trrhXmsS_vs">금요일~(친구만나고 온 썰,가이드 보컬 썰,오디션썰,딸바보) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6153849">21일</a> - <a href="https://youtu.be/75dIsQrAZdE">짧뱅쓰!!!(커버곡가리 , VRChat 맵 탐방)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6172346">22일</a> - 망비챤</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - 화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)(저작권크리)●</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - 화요일 낮에~(저작권크리)●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - 화요일 낮에~(트위치 구독 이벤트,감사공연,헬렛-죠지분대)(저작권크리)(길이때문에 수정불가 편집요망)●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - <a href="https://youtu.be/IkzcGtTW7Js">화요일 낮에~(저작권크리)(음원교체)●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6235761">27일</a> - <a href="https://youtu.be/Jz5DcMOcfOw">SO HOT</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">28일</a> - <a href="https://youtu.be/VSGGYruKDJQ">4시) 이세돌 미연시</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6247143">29일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6276790">2부</a>
-        - </a href="https://youtu.be/Hp_HbfT0bRI">4시반) 풀트뱅(저작권크리)●</a></ul>
+        - <a href="https://youtu.be/Hp_HbfT0bRI">4시반) 풀트뱅(저작권크리)(음원교체)●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6297813">31일</a> - <a href="https://youtu.be/x2buVnTCnmU">7시) ER 인비테이셔널 (이세돌 합방)</a></ul>
 
           </ul>
@@ -181,7 +181,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - 오뱅창</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6383582">05일</a> - <a href="https://youtu.be/BRxugn7WEac">8시 왁타버스 고멤가요제 드래프트</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6402715">07일</a> - <a href="https://youtu.be/ILGJw-WkJ3c">5시) VRC 여행떠나기(VRC풀트 꽃구경)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6445830">10일</a> - </a href="https://youtu.be/UuZ_r9_t8MY">10시가 되기 전 떠나는 신데렐라(저작권크리) ●</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6445830">10일</a> - <a href="https://youtu.be/UuZ_r9_t8MY">10시가 되기 전 떠나는 신데렐라(저작권크리)(해당부분제거) ●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6459700">11일</a> - <a href="https://youtu.be/EE-KpZLJv58">8시) Butter 커버 공개</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6480388">12일</a> - <a href="https://youtu.be/RuRI-GuyhwQ">4시반) VRC Butter 풀트뱅 1부 </a> 
                                                                              , <a href="https://youtu.be/3lD0j0sPTkc">4시반) VRC Butter 풀트뱅 2부</a></ul>
