--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p><br></p>
       <ul>※ 영상에서 소리가 안나오는 구간(빨간선 구간)이 있거나 문제가 있다면<br>
           　 해당 영상의 댓글로 남겨주시면 체크하겠습니다<br>
-             　 다만 진행중에 뜬금없는 노래가 나오는건 저작권 회피용이니 그러려니 넘어가시면 됩니다</ul>
+          　 다만 진행중에 뜬금없는 노래가 나오는건 저작권 회피용이니 그러려니 넘어가시면 됩니다</ul>
       
       <ul>※ 2022년 10월 18일자 기준 가지고 있는 6월달 분까지 업로드 완료<br>
            　 7 , 8월 분은 업로드를 잠시 보류하고 제공받은 영상들로<br>
@@ -196,6 +196,35 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6704691">29일</a> - <a href="https://youtu.be/KmMDMRVuIo4">4시반) 일 좀 하다 풀트뱅쓰 (발로 스승모집 , VRC풀트 , 우마무스메)</a></ul>
         
       </ul>
+
+<p><br></p>
+
+
+    <ul>7월(업로드 예정)
+       <ul><a href="">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기</a></ul>
+       <ul><a href="">03일</a> - <a href="">7시) 비틀즈 면접</a></ul>
+       <ul><a href="">05일</a> - <a href=""></a>5시) 마크 공포맵!</ul>
+       <ul><a href="">05일</a> - <a href=""></a>5시) 마크 공포맵!</ul>
+       <ul><a href="">06일</a> - <a href=""></a>정상영업 합니다</ul>
+       <ul><a href="">07일</a> - <a href=""></a>8시) 발로란트 합방~!!!</ul>
+       <ul><a href="">08일</a> - <a href=""></a>불금 드가자~~~~</ul>
+       <ul><a href="">09일</a> - <a href=""></a>비챤등장~!</ul>
+       <ul><a href="">10일</a> - <a href=""></a>MBTI 재검사</ul>
+       <ul><a href="">12일</a> - <a href=""></a>우와 일은 정말 즐거워~!</ul>
+       <ul><a href="">15일</a> - <a href=""></a>방가방가류</ul>
+       <ul><a href="">16일</a> - <a href=""></a>[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵</ul>
+       <ul><a href="">17일</a> - <a href=""></a>5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영</ul>
+       <ul><a href="">19일</a> - <a href=""></a>이요오오오오오옹</ul>
+       <ul><a href="">20일</a> - <a href=""></a>좋아 가자!!!!!!!!!!!!!!!!!!!!!</ul>
+       <ul><a href="">22일</a> - <a href=""></a>8시) 비챤의 괴담식당</ul>
+       <ul><a href="">24일</a> - <a href=""></a>초짧뱅</ul>
+       <ul><a href="">25일</a> - <a href=""></a>우마뾰이</ul>
+       <ul><a href="">26일</a> - <a href=""></a>5시) 여름맞이 풀트뱅~!</ul>
+       <ul><a href="">27일</a> - <a href=""></a>핫걸이라 그런지 너무 덥달까나~</ul>
+       <ul><a href="">30일</a> - <a href=""></a>5시) 러브비트!</ul>
+       <ul><a href="">31일</a> - <a href=""></a>5시) 싱크룸 보컬 모집쓰!</ul>
+
+    </ul>
 </span>
     </ul>
       <div><img src="" alt=""></div>
