--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
      <p><br></p>
 
-     <ul>6월
+     <ul>6월 - <a href="https://cafe.naver.com/steamindiegame/6761779">月刊 ゔぃちゃん 6月号</a>
         <ul><a href="https://cafe.naver.com/steamindiegame/6307504">01일</a> - <a href="https://youtu.be/LTGfBTQq2kA">해피 수요일!!!!!!!!!!!!! (우타이테월드컵 , 첫사랑 고로시 , 뱅종노래방)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6337693">03일</a> - 짧뱅쓰!</ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - 오뱅창</a></ul>
@@ -200,29 +200,30 @@
 <p><br></p>
 
 
-    <ul>7월(업로드 예정)
-       <ul><a href="">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기</a></ul>
-       <ul><a href="">03일</a> - <a href="">7시) 비틀즈 면접</a></ul>
-       <ul><a href="">05일</a> - <a href=""></a>5시) 마크 공포맵!</ul>
-       <ul><a href="">05일</a> - <a href=""></a>5시) 마크 공포맵!</ul>
-       <ul><a href="">06일</a> - <a href=""></a>정상영업 합니다</ul>
-       <ul><a href="">07일</a> - <a href=""></a>8시) 발로란트 합방~!!!</ul>
-       <ul><a href="">08일</a> - <a href=""></a>불금 드가자~~~~</ul>
-       <ul><a href="">09일</a> - <a href=""></a>비챤등장~!</ul>
-       <ul><a href="">10일</a> - <a href=""></a>MBTI 재검사</ul>
-       <ul><a href="">12일</a> - <a href=""></a>우와 일은 정말 즐거워~!</ul>
-       <ul><a href="">15일</a> - <a href=""></a>방가방가류</ul>
-       <ul><a href="">16일</a> - <a href=""></a>[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵</ul>
-       <ul><a href="">17일</a> - <a href=""></a>5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영</ul>
-       <ul><a href="">19일</a> - <a href=""></a>이요오오오오오옹</ul>
-       <ul><a href="">20일</a> - <a href=""></a>좋아 가자!!!!!!!!!!!!!!!!!!!!!</ul>
-       <ul><a href="">22일</a> - <a href=""></a>8시) 비챤의 괴담식당</ul>
-       <ul><a href="">24일</a> - <a href=""></a>초짧뱅</ul>
-       <ul><a href="">25일</a> - <a href=""></a>우마뾰이</ul>
-       <ul><a href="">26일</a> - <a href=""></a>5시) 여름맞이 풀트뱅~!</ul>
-       <ul><a href="">27일</a> - <a href=""></a>핫걸이라 그런지 너무 덥달까나~</ul>
-       <ul><a href="">30일</a> - <a href=""></a>5시) 러브비트!</ul>
-       <ul><a href="">31일</a> - <a href=""></a>5시) 싱크룸 보컬 모집쓰!</ul>
+    <ul>7월(업로드 예정)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6726177">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6755565">03일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6763737">03일 2부</a>
+         - <a href="">7시) 비틀즈 면접</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href=""></a>5시) 마크 공포맵!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href=""></a>5시) 마크 공포맵!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href=""></a>정상영업 합니다</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href=""></a>8시) 발로란트 합방~!!!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6807681">08일</a> - <a href=""></a>불금 드가자~~~~</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href=""></a>비챤등장~!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href=""></a>MBTI 재검사</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href=""></a>우와 일은 정말 즐거워~!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href=""></a>방가방가류</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href=""></a>[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href=""></a>5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href=""></a>이요오오오오오옹</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6964313">20일</a> - <a href=""></a>좋아 가자!!!!!!!!!!!!!!!!!!!!!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6978337">22일</a> - <a href=""></a>8시) 비챤의 괴담식당</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7002557">24일</a> - <a href=""></a>초짧뱅</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7012271">25일</a> - <a href=""></a>우마뾰이</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7031013">26일</a> - <a href=""></a>5시) 여름맞이 풀트뱅~!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7040520">27일</a> - <a href=""></a>핫걸이라 그런지 너무 덥달까나~</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7086514">30일</a> - <a href=""></a>5시) 러브비트!</ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7091693">31일</a> - <a href=""></a>5시) 싱크룸 보컬 모집쓰!</ul>
 
     </ul>
 </span>
