--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <ul>7월(업로드 예정 , 1일만 링크 작동)  - <a href="https://cafe.naver.com/steamindiegame/7091782">月刊 ゔぃちゃん 7月号</a>
        <ul><a href="https://cafe.naver.com/steamindiegame/6726177">01일</a> - <a href="">4시반) 멜론36위 가수의 레디언트 36위 선생님께 발로란트 배우기 (발로란트 배우기 , Vii틀즈 서류면접 , 뱅종노래뱅? , Butter후기로 비비기  , 찐뱅종곡 - 낭만고라니)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6755565">03일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6763737">03일 2부</a>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6755565">03일 1부</a> , <a href="https://cafe.naver.com/steamindiegame/6763737">2부</a>
          - <a href="">7시) 비틀즈 면접</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="">5시) 마크 공포맵!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="">5시) 마크 공포맵!</a></ul>
