--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <ul>4월
         <ul>01일 - <a href="https://youtu.be/M6MRZ-fUOuA">고세구 하이빵가루~</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5445912">02일</a> - </a href="https://youtu.be/kM1SraKvaLs">비챤씹덕 티어겜 ●</ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5474954">03일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기 (니즈님 풀트 춤배우기 , 애송이챤)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5474954">03일</a> - <a href="https://youtu.be/XQEQVE2xQBk">VRC춤배우기 (니즈님 풀트 춤배우기 , 애송이챤 , 별의 커비 디스커버리 엔딩 , 젤다 야생의 숨결)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5488244">05일</a> - <a href="https://youtu.be/zOwbpWfFC2c">두둥등챤 (첫 유튭스트리밍썰 , 아바타 변천사 , 고대라니 , MMD맵 , 오토튠 노래 ,노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5503356">06일</a> - <a href="https://youtu.be/2l6iLQ8H348">잔잔뱅 (북기 & 우벌 서열정리 , 추억가리 , 킹무위키 - 비챤 , 챤바 기웃기웃)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5531838">08일</a> - <a href="https://youtu.be/chgMOS8OrFo">불금이당~!!!! (봄날 비하인드 , DayBreak Frontline 100만 기념영상 , 회의썰 , 이세돌망상 , 노래가리)</a></ul>
@@ -140,18 +140,18 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/5699079">20일</a> - <a href="https://youtu.be/xy736ukbqR4">차분하게. 살아가기 ^^7 (기타 노래뱅 , MBTI가리 , 라프텔보며 애니가리 , 얼불춤)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5714574">21일</a> - <a href="https://youtu.be/fDyfbprXBJw">4시 반) VRC 풀트 10점식 찍먹(기타 노래뱅 , 10점 풀트 , 어이 테메~)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5742011">23일</a> - <a href="https://youtu.be/Gf7wmNugyhM">짧뱅스 (이세돌 싸이퍼 후기 , 패션쇼 기획 , 기타 노래뱅  , 뢴트 & 어머니 생신썰)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5760265">24일</a> - VRC 패션쇼 공지쓰는 날</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5796304">26일</a> - 5시) VRC 유튜브 인/아웃트로 촬영</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5837476">29일</a> - 해피 금요일~~</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5852428">30일</a> - 해피 주말!!!!!!!</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5760265">24일</a> - <a href="https://youtu.be/BtX0rhtULss">VRC 패션쇼 공지쓰는 날 (엠가리 2화 , 비패쇼 스태프모집)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5796304">26일</a> - <a href="https://youtu.be/2F_bo9xzM-0">5시) VRC 유튜브 인/아웃트로 촬영 (메보즈 싸운썰 , 엠가리 3,4화 , 월페이퍼,불법굿즈 구경 , 인,아웃트로 촬영 , 발로란트)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5837476">29일</a> - <a href="https://youtu.be/H-cKoG2sLxk">해피 금요일~~ (기억력 테스트 , 엠가리 6,7화 , 18년도 비챤 오버워치 영상 시청 , 오버워치2 , 큰거온다! 그럼안올린다? 아이네온다..)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5852428">30일</a> - <a href="https://youtu.be/_3olI82fsIo">해피 주말!!!!!!! (노래가리 , 100만포 - 폰서트 , 엠가리 8화 , 사랑은 은하수 다방에서 최초공개 , 동요 월드컵 , 빌보두)</a></ul>
 
 
 </ul>
       
       <p>　</p>
       <ul>5월
-        <ul><a href="https://cafe.naver.com/steamindiegame/5868072">01일</a> - 소원이 하나 있습니다</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5915201">04일</a> - (스포안함) 닥스보고 왔습니다!!!!!</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5868072">01일</a> - <a href="https://youtu.be/zFE8aTHCDVc">소원이 하나 있습니다 (비챤 테마곡 , 엠가리 9화 , 비챤 감독 공지 , rr땅 페이셜 구경 , 프로젝트D)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5915201">04일</a> - <a href="https://youtu.be/JGNj3Dc0phQ">(스포안함) 닥스보고 왔습니다!!!!!(닥터스트레인지2 , 이세마스 영상툰2화 , 발로란트)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5954982">07일</a> - <a href="https://youtu.be/tlZzy-9GThY">4시 멜론 36위 가수 공약 (뽀삐 , 주스터피스)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5971100">08일</a> - 4시) 비챤 팬게임~!!</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5988912">09일</a> - 4시반) VRC 생애 첫 낚시 ^-^</a></ul>
