--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/5868072">01일</a> - <a href="https://youtu.be/zFE8aTHCDVc">소원이 하나 있습니다 (비챤 테마곡 , 엠가리 9화 , 비챤 감독 공지 , rr땅 페이셜 구경 , 프로젝트D)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5915201">04일</a> - <a href="https://youtu.be/JGNj3Dc0phQ">(스포안함) 닥스보고 왔습니다!!!!!(닥터스트레인지2 , 이세마스 영상툰2화 , 발로란트)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/5954982">07일</a> - <a href="https://youtu.be/tlZzy-9GThY">4시 멜론 36위 가수 공약 (뽀삐 , 주스터피스)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5971100">08일</a> - 4시) 비챤 팬게임~!!</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/5988912">09일</a> - 4시반) VRC 생애 첫 낚시 ^-^</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6002509">10일</a> - <a href="https://youtu.be/OEpGb5RmKTQ">화하하하하 (믹싱썰 , 챤버지 게임썰 , 페글린)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6002509">11일</a> - 슈슈슈슈</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5971100">08일</a> - <a href="https://youtu.be/2ks4LZg4co8">4시) 비챤 팬게임~!!(오프 텐션 챤 , 라이브 콘서트 썰 , 추억의 노래가리 , 이상한 나라의 비챤 팬게임 ,이세돌 무협만화 0,1화 , B챤만화 5화)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/5988912">09일</a> - <a href="https://youtu.be/5gALE9gP60s">4시반) VRC 생애 첫 낚시 ^-^ (VRC낚시 , 메보즈 싸움 , 유튜브 스트리밍 시절 , 왁며든 이야기)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6002509">10일</a> - <a href="https://youtu.be/OEpGb5RmKTQ">화하하하하 (믹실썰 , 어렸을때 썰 , 팬덤전쟁 관련 노가리(다이아서바이벌 회상) , 좋아하는 향 , 자취하고싶다 , 페글린)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6017866">11일</a> - <a href="https://youtu.be/IiarQ7ECzek">슈슈슈슈 (메보즈 반성문 , 영화 노가리 , MCU 이상형 월드컵 , 노래뱅 , 페글린) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6060992">14일</a> - 짧뱅쓰 ●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6069591">15일</a> - 4시반 VRC 풀트 (저작권크리)(길이때문에 수정불가 편집요망) ●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6103429">17일</a> - <a href="https://youtu.be/-3LvGLgatJY">화요비챤 (중앙일보 인터뷰후기 , 쥬뗌므 , 마크제일검 , 노래뱅)</a></ul>
