--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/6103429">17일</a> - <a href="https://youtu.be/-3LvGLgatJY">화요비챤 (중앙일보 인터뷰후기 , 쥬뗌므 , 마크제일검 , 노래뱅)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6141990">20일</a> - <a href="https://youtu.be/trrhXmsS_vs">금요일~ (친구만나고 온 썰 , 가이드 보컬 썰 , 오디션썰 , 딸바보) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6153849">21일</a> - <a href="https://youtu.be/75dIsQrAZdE">짧뱅쓰!!! (커버곡가리 , VRChat 맵 탐방)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6172346">22일</a> - 망비챤</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6172346">22일</a> - <a href="https://youtu.be/BL71lvCoXSs">망비챤 (빌보두 , 유치원때 그림 , Little Witch in the Woods , 나만,봄 최초공개)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6196210">24일</a> - 화요일 낮에~ (트위치 구독 이벤트 , 감사공연 , 헬렛-죠지분대)(저작권크리)(길이때문에 수정불가 편집요망)●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6209770">25일</a> - <a href="https://youtu.be/IkzcGtTW7Js">화요일 낮에~ (저작권크리)(음원교체)●</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6235761">27일</a> - <a href="https://youtu.be/Jz5DcMOcfOw">SO HOT</a></ul>
