--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
      <ul>6월 - <a href="https://cafe.naver.com/steamindiegame/6761779">月刊 ゔぃちゃん 6月号</a>
         <ul><a href="https://cafe.naver.com/steamindiegame/6307504">01일</a> - <a href="https://youtu.be/LTGfBTQq2kA">해피 수요일!!!!!!!!!!!!! (우타이테월드컵 , 첫사랑 고로시 , 뱅종노래방)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6337693">03일</a> - 짧뱅쓰!</ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - 오뱅창</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6337693">03일</a> - <a href="https://youtu.be/Z5bS44xpZeI">짧뱅쓰! (이세돌 차가리)</ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6352400">04일</a> - <a href="https://youtu.be/dYCkTBjAaEg">오뱅창 (봄여름가을겨울 감상 , 여름노래 , 이세돌은 강하다 , 빌보두)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6383582">05일</a> - <a href="https://youtu.be/BRxugn7WEac">8시 왁타버스 고멤가요제 드래프트</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6402715">07일</a> - <a href="https://youtu.be/ILGJw-WkJ3c">5시) VRC 여행떠나기 (VRC풀트 꽃구경)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6445830">10일</a> - <a href="https://youtu.be/UuZ_r9_t8MY">10시가 되기 전 떠나는 신데렐라 (저작권크리)(해당부분제거) ●</a></ul>
@@ -187,7 +187,7 @@
                                                                              , <a href="https://youtu.be/3lD0j0sPTkc">4시반) VRC Butter 풀트뱅 2부</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6505490">14일</a> - <a href="https://youtu.be/SJwHlqOhQJI">냐하 (스탠리 패러블)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6520147">15일</a> - <a href="https://youtu.be/Xn7FWs0VCkc">일 하면서 잔잔쓰 (vii틀즈 구상 , 이세돌 디코,술안주노가리 , 포켓몬아르세우스)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/6569154">19일</a> - 잔잔 일요일</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/6569154">19일</a> - <a href="https://youtu.be/LCxOOgEeh5s">잔잔 일요일(난 짬뽕이요 , 4집 녹음,고멤가요제 썰 , 노래가리 , 20 Minutes Till Down , 심해의 리틀 크라이-블베볶 , 빌보두 , 고라니 생태조사) </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6603122">21일</a> - <a href="https://youtu.be/WRlYaoesLdo">냐하 (vii틀즈 모집 , 챤랄 , 오디션가리 , 쉬버리2)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6624948">22일</a> - <a href="https://youtu.be/_Cn15NT1ixc">잰잰 일뱅쓰로 시작 (쉬버리2 , Veiled Experts , 친척 이야기 , 방털기 노가리)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/6647433">25일</a> - <a href="https://youtu.be/4XMzAKKl4-A">초지각쓰 ㅠ.ㅠ..!!! (스튜디오가리 , 사랑해 폭격 , 발로 , 비패쇼 티져)</a></ul>
